Change copy and add spinner while saving changes

--- a/web_app/public/locales/de/translation.json
+++ b/web_app/public/locales/de/translation.json
@@ -1,6 +1,7 @@
 {
     "editor": {
         "save": "Speichern",
+        "saving": "Speichern",
         "undo": "Rückgängig machen",
         "redo": "Wiederholen",
         "deleteObject": "Objekt löschen",
