--- a/web_app/public/locales/en/translation.json
+++ b/web_app/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
     "editor": {
         "save": "Save",
+        "saving": "Saving",
         "undo": "Undo",
         "redo": "Redo",
         "deleteObject": "Delete object",
