--- a/web_app/public/locales/es/translation.json
+++ b/web_app/public/locales/es/translation.json
@@ -1,6 +1,7 @@
 {
     "editor": {
         "save": "Guardar",
+        "saving": "Guardando",
         "undo": "Deshacer",
         "redo": "Rehacer",
         "deleteObject": "Eliminar objeto",
