--- a/web_app/public/locales/fr/translation.json
+++ b/web_app/public/locales/fr/translation.json
@@ -1,6 +1,7 @@
 {
     "editor": {
         "save": "Enregistrer",
+        "saving": "Sauvegarde",
         "undo": "Annuler",
         "redo": "Rétablir",
         "deleteObject": "Supprimer l'objet",
