--- a/web_app/public/locales/it/translation.json
+++ b/web_app/public/locales/it/translation.json
@@ -1,6 +1,7 @@
 {
     "editor": {
         "save": "Salva",
+        "saving": "Salvataggio",
         "undo": "Annulla",
         "redo": "Ripeti",
         "deleteObject": "Delete object",
