--- a/web_app/public/locales/pt-br/translation.json
+++ b/web_app/public/locales/pt-br/translation.json
@@ -1,6 +1,7 @@
 {
     "editor": {
         "save": "Salvar",
+        "saving": "Salvando",
         "undo": "Desfazer",
         "redo": "Refazer",
         "deleteObject": "Excluir objeto",
