--- a/web_app/public/locales/de/translation.json
+++ b/web_app/public/locales/de/translation.json
@@ -2,6 +2,18 @@
     "editor": {
         "save": "Speichern",
         "saving": "Speichern",
+        "savingImageToastTitle": "Bild wird gespeichert...",
+        "savingImageToastDescription": "Das Bild wird gerade gespeichert.",
+        "saveImageSuccessToastTitle": "Erfolgreich gespeichert!",
+        "saveImageSuccessToastDescription": "Das Bild wurde erfolgreich gespeichert.",
+        "saveImageErrorToastTitle": "Oh oh! Etwas ist schiefgelaufen",
+        "saveImageErrorToastDescription": "Das Bild konnte nicht gespeichert werden.",
+        "removingImageToastTitle": "Objekt wird entfernt...",
+        "removingImageToastDescription": "Das Objekt wird aus dem Bild entfernt.",
+        "removeImageSuccessToastTitle": "Erfolgreich entfernt!",
+        "removeImageSuccessToastDescription": "Das Objekt wurde erfolgreich entfernt.",
+        "removeImageErrorToastTitle": "Oh oh! Etwas ist schiefgelaufen",
+        "removeImageErrorToastDescription": "Das Objekt konnte nicht entfernt werden.",
         "undo": "Rückgängig machen",
         "redo": "Wiederholen",
         "deleteObject": "Objekt löschen",
