--- a/web_app/public/locales/en/translation.json
+++ b/web_app/public/locales/en/translation.json
@@ -2,6 +2,18 @@
     "editor": {
         "save": "Save",
         "saving": "Saving",
+        "savingImageToastTitle": "Saving image...",
+        "savingImageToastDescription": "Image is currently being saved.",
+        "saveImageSuccessToastTitle": "Saved successfully!",
+        "saveImageSuccessToastDescription": "Image have been saved successfully.",
+        "saveImageErrorToastTitle": "Uh oh! Something went wrong",
+        "saveImageErrorToastDescription": "Image could not be saved.",
+        "removingObjectToastTitle": "Removing object...",
+        "removingObjectToastDescription": "Object is being removed from the image.",
+        "removeObjectSuccessToastTitle": "Removed successfully!",
+        "removeObjectSuccessToastDescription": "Object have been removed.",
+        "removeObjectErrorToastTitle": "Uh oh! Something went wrong",
+        "removeObjectErrorToastDescription": "Object could not be removed.",
         "undo": "Undo",
         "redo": "Redo",
         "deleteObject": "Delete object",
