Enfatize delete button

--- a/web_app/public/locales/de/translation.json
+++ b/web_app/public/locales/de/translation.json
@@ -1,5 +1,6 @@
 {
     "editor": {
+        "erase": "Löschen",
         "save": "Speichern",
         "saving": "Speichern",
         "savingImageToastTitle": "Bild wird gespeichert...",
