--- a/web_app/public/locales/en/translation.json
+++ b/web_app/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "editor": {
+        "erase": "Erase",
         "save": "Save",
         "saving": "Saving",
         "savingImageToastTitle": "Saving image...",
