--- a/web_app/public/locales/fr/translation.json
+++ b/web_app/public/locales/fr/translation.json
@@ -1,5 +1,6 @@
 {
     "editor": {
+        "erase": "Effacer",
         "save": "Enregistrer",
         "saving": "Sauvegarde",
         "savingImageToastTitle": "Enregistrement de l'image...",
