--- a/web_app/public/locales/it/translation.json
+++ b/web_app/public/locales/it/translation.json
@@ -1,5 +1,6 @@
 {
     "editor": {
+        "erase": "Cancella",
         "save": "Salva",
         "saving": "Salvataggio",
         "savingImageToastTitle": "Salvataggio dell'immagine...",
