--- a/web_app/public/locales/pt/translation.json
+++ b/web_app/public/locales/pt/translation.json
@@ -1,5 +1,6 @@
 {
     "editor": {
+        "erase": "Excluir",
         "save": "Salvar",
         "saving": "Salvando",
         "savingImageToastTitle": "Salvando imagem...",
