--- a/web_app/public/locales/en/translation.json
+++ b/web_app/public/locales/en/translation.json
@@ -19,6 +19,11 @@
         "redo": "Redo",
         "deleteObject": "Delete object",
         "showOriginalImage": "Show original image",
-        "resetZoom": "Reset zoom"
+        "resetZoom": "Reset zoom",
+        "instructions": {
+            "title": "¡New photo eraser!",
+            "description": "Use the brush to highlight and remove unwanted elements from your images.",
+            "checkboxText": "Don't show it again"
+        }
     }
 }
