Translate header title

--- a/web_app/public/locales/de/translation.json
+++ b/web_app/public/locales/de/translation.json
@@ -24,6 +24,9 @@
             "title": "Neuer Objekt-Radiergummi!",
             "description": "Verwenden Sie den Pinsel, um unerwünschte Elemente aus Ihren Bildern zu markieren und zu entfernen.",
             "checkboxText": "Nicht mehr anzeigen"
+        },
+        "header": {
+            "title": "Objektlöscher"
         }
     }
 }
