--- a/web_app/public/locales/es/translation.json
+++ b/web_app/public/locales/es/translation.json
@@ -24,6 +24,9 @@
             "title": "¡Nuevo borrador de objetos!",
             "description": "Utiliza el pincel para marcar y remover los elementos no deseados en tus imágenes.",
             "checkboxText": "No volver a mostrar"
+        },
+        "header": {
+            "title": "Borrador de objetos"
         }
     }
 }
