Translate header tooltips for close button and help

--- a/web_app/public/locales/es/translation.json
+++ b/web_app/public/locales/es/translation.json
@@ -26,7 +26,9 @@
             "checkboxText": "No volver a mostrar"
         },
         "header": {
-            "title": "Borrador de objetos"
+            "title": "Borrador de objetos",
+            "infoButton": "Ayuda",
+            "closeButton": "Cerrar"
         }
     }
 }
