--- a/web_app/public/locales/de/translation.json
+++ b/web_app/public/locales/de/translation.json
@@ -26,7 +26,9 @@
             "checkboxText": "Nicht mehr anzeigen"
         },
         "header": {
-            "title": "Objektlöscher"
+            "title": "Objektlöscher",
+            "infoButton": "Hilfe",
+            "closeButton": "Schließen"
         }
     }
 }
