--- a/web_app/public/locales/en/translation.json
+++ b/web_app/public/locales/en/translation.json
@@ -26,7 +26,9 @@
             "checkboxText": "Don't show it again"
         },
         "header": {
-            "title": "Object eraser"
+            "title": "Object eraser",
+            "infoButton": "Help",
+            "closeButton": "Close"
         }
     }
 }
