--- a/web_app/public/locales/fr/translation.json
+++ b/web_app/public/locales/fr/translation.json
@@ -26,7 +26,9 @@
             "checkboxText": "Ne plus afficher"
         },
         "header": {
-            "title": "Effaceur d'objets"
+            "title": "Effaceur d'objets",
+            "infoButton": "Aide",
+            "closeButton": "Fermer"
         }
     }
 }
