--- a/web_app/public/locales/it/translation.json
+++ b/web_app/public/locales/it/translation.json
@@ -26,7 +26,9 @@
             "checkboxText": "Non mostrare più"
         },
         "header": {
-            "title": "Cancellatore di oggetti"
+            "title": "Cancellatore di oggetti",
+            "infoButton": "Aiuto",
+            "closeButton": "Chiudi"
         }
     }
 }
