--- a/web_app/public/locales/pt/translation.json
+++ b/web_app/public/locales/pt/translation.json
@@ -26,7 +26,9 @@
             "checkboxText": "Não mostrar novamente"
         },
         "header": {
-            "title": "Apagador de objetos"
+            "title": "Apagador de objetos",
+            "infoButton": "Ajuda",
+            "closeButton": "Fechar"
         }
     }
 }
